register/login TDD complete

--- a/server/views/partials/nav.jade
+++ b/server/views/partials/nav.jade
@@ -10,3 +10,5 @@ nav.navbar.navbar-default
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav.navbar-right
         li.active: a(href='/'): i.fa.fa-home &nbsp; Home
+        li.active: a(href='/login'): i.fa.fa-home &nbsp; Login
+        li.active: a(href='/register'): i.fa.fa-home &nbsp; Register
