--- a/server/views/layouts/master.jade
+++ b/server/views/layouts/master.jade
@@ -5,7 +5,7 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title Hapi Prototype
-    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.2/cosmo/bootstrap.min.css')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.2/simplex/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet', href='/style.css')
     link(rel='shortcut icon', href='/favicon.ico')
