--- a/server/views/templates/users/register.jade
+++ b/server/views/templates/users/register.jade
@@ -1,12 +1,26 @@
 extends ../../layouts/master
 block content
-  .row
-    .col-xs-12
-      h3 Register
-
-      form(method='post', action='/users')
-        label Email
-        input#email(type='email', name='email', required, autofocus=true)
-        label Password
-        input#password(type='password', name='password', required)
-        button(type='submit') Register
+  .row#login
+    .col-sm-6.col-md-4.col-md-offset-4
+      .panel.panel-default
+        .panel-heading
+          h3 Sign In
+        .panel-body
+          form(action='/users', method='post')
+            fieldset
+              .row
+                .col-sm-12.col-md-10.col-md-offset-1
+                  .form-group
+                    .input-group
+                      span.input-group-addon
+                        i.glyphicon.glyphicon-user
+                      input.form-control(typ='email' name='email' autofocus='')
+                  .form-group
+                    .input-group
+                      span.input-group-addon
+                        i.glyphicon.glyphicon-lock
+                      input.form-control(type='password' name='password' required)
+                  .form-group
+                    input.btn.btn-lg.btn-primary.btn-block(type='submit' value='Register')
+                      
+  
