--- a/server/views/templates/users/login.jade
+++ b/server/views/templates/users/login.jade
@@ -3,10 +3,10 @@ block content
   .row
     .col-xs-12
       h3 Login
-
-      form(method='post', action='/authenticate')
-        label Email
-        input#email(type='email', name='email', required, autofocus=true)
-        label Password
-        input#password(type='password', name='password', required)
-        button(type='submit') Login
+      #logform
+        form(method='post', action='/authenticate')
+          label Email
+          input#email(type='email', name='email', required, autofocus=true)
+          label Password
+          input#password(type='password', name='password', required)
+          button(type='submit') Login
